# vector-robot

./: .gitignore  CMakeLists.txt  README.md  animations.md  package.xml  pre-push.sh  requirements.txt
launch/: hello_world.launch  lab_demo.launch  vector_core.launch
msg/: Color.msg  ColorProfile.msg  Dist.msg  Drive.msg  Face.msg  ImageRect.msg  LightCube.msg  Object.msg  Pose.msg  Proximity.msg  Response.msg  RobotStatus.msg  Touch.msg
nodes/: anki_vector.py  anki_vector_core.py  behavior.py  camera.py  cube.py  events.py  media.py  motors.py  screen.py  sensors.py  util.py  vision.py
sample_nodes/: animate.py  demo.py  display_image.py  hello_world_move.py  math_demo.py  play_sound.py  text_to_speech.py
sample_nodes/demo/: cube_routine.py  demo.py  fist_bump.py  idle_anim.py  math_demo.py  sleep_routine.py
sample_nodes/lab-demo/: cube_detect.py  fistbump_detect.py  idle_anim.py  labdemo.py  pet_detect.py  prompt_receiver.py  prompts.py
sample_nodes/seq-demo/: cube_routine.py  fist_bump.py  idle_anim.py  pet_routine.py  seq_demo.py  sleep_routine.py
